fixed the tutor start live

--- a/create-class.html
+++ b/create-class.html
@@ -88,14 +88,10 @@
                 <div class="form-header">
                     <i class="fas fa-video pulse-icon"></i>
                     <h2>Schedule <span class="green-text">Live Class</span></h2>
-                    <p>Create a new live teaching session using Jitsi Meet</p>
+
                 </div>
 
-                <div class="jitsi-info">
-                    <h4><i class="fas fa-info-circle"></i> Using Jitsi Meet (Free)</h4>
-                    <p>✅ No time limits • ✅ Up to 75 participants • ✅ Completely free</p>
-                    <p>Classes run on <strong>meet.jit.si</strong> - no account needed!</p>
-                </div>
+
 
                 <div class="p2p-form">
                     <div class="input-group">
@@ -129,13 +125,19 @@
                         <label for="classGrade"><i class="fas fa-graduation-cap"></i> Select Grade</label>
                         <select id="classGrade">
                             <option value="">Select Grade</option>
+                            <option value="Grade 8">Grade 1</option>
+                            <option value="Grade 9">Grade 2</option>
+                            <option value="Grade 10">Grade 3</option>
+                            <option value="Grade 11">Grade 4</option>
+                            <option value="Grade 12">Grade 5</option>
+                            <option value="Grade 11">Grade 6</option>
+                            <option value="Grade 12">Grade 7</option>
                             <option value="Grade 8">Grade 8</option>
                             <option value="Grade 9">Grade 9</option>
                             <option value="Grade 10">Grade 10</option>
                             <option value="Grade 11">Grade 11</option>
                             <option value="Grade 12">Grade 12</option>
-                            <option value="University">University</option>
-                            <option value="Adult">Adult Learning</option>
+
                         </select>
                     </div>
 
@@ -150,7 +152,7 @@
                             <li>1. Schedule your class (room is created automatically)</li>
                             <li>2. Share the room link with students</li>
                             <li>3. Click "Start Live" when ready to begin</li>
-                            <li>4. Teach using Jitsi's video, audio, and screen sharing</li>
+                            <li>4. Teach usingvideo, audio, and screen sharing</li>
                             <li>5. No time limits - teach as long as you need</li>
                         </ul>
                     </div>
