--- a/live-session.html
+++ b/live-session.html
@@ -22,6 +22,16 @@
             overflow-x: hidden;
         }
 
+        /* Logo color definition */
+        :root {
+            --logo-green: #00ff88;
+            /* Vibrant green from logo */
+            --logo-green-dark: #00cc6d;
+            /* Darker shade for hover */
+            --logo-green-light: rgba(0, 255, 136, 0.1);
+            /* Light tint */
+        }
+
         /* Header Styles */
         .session-header {
             background: rgba(15, 23, 42, 0.9);
@@ -30,7 +40,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 2px solid #32cd32;
+            border-bottom: 2px solid var(--logo-green);
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -47,12 +57,13 @@
             width: 40px;
             height: 40px;
             border-radius: 10px;
-            background: #32cd32;
+            background: var(--logo-green);
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: bold;
-            color: white;
+            color: black;
+            /* Changed to black for better contrast on bright green */
             font-size: 20px;
         }
 
@@ -62,7 +73,7 @@
         }
 
         .green-text {
-            color: #32cd32;
+            color: var(--logo-green);
         }
 
         .room-info {
@@ -71,13 +82,13 @@
         }
 
         .room-name {
-            color: #32cd32;
+            color: var(--logo-green);
             font-weight: bold;
             font-size: 1.3em;
-            background: rgba(50, 205, 50, 0.1);
+            background: var(--logo-green-light);
             padding: 8px 20px;
             border-radius: 20px;
-            border: 1px solid #32cd32;
+            border: 1px solid var(--logo-green);
         }
 
         .control-buttons {
@@ -86,8 +97,9 @@
         }
 
         .header-btn {
-            background: #32cd32;
+            background: var(--logo-green);
             color: black;
+            /* Black text for better contrast */
             border: none;
             padding: 10px 20px;
             border-radius: 8px;
@@ -102,9 +114,9 @@
         }
 
         .header-btn:hover {
-            background: #2db82d;
+            background: var(--logo-green-dark);
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(50, 205, 50, 0.4);
+            box-shadow: 0 5px 15px rgba(0, 255, 136, 0.4);
         }
 
         .header-btn.secondary {
@@ -134,16 +146,16 @@
             max-width: 500px;
             width: 90%;
             backdrop-filter: blur(10px);
-            border: 1px solid rgba(50, 205, 50, 0.2);
+            border: 1px solid rgba(0, 255, 136, 0.2);
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
         }
 
         .spinner {
             width: 70px;
             height: 70px;
-            border: 4px solid rgba(50, 205, 50, 0.3);
+            border: 4px solid rgba(0, 255, 136, 0.3);
             border-radius: 50%;
-            border-top: 4px solid #32cd32;
+            border-top: 4px solid var(--logo-green);
             animation: spin 1s linear infinite;
             margin: 0 auto 30px;
         }
@@ -161,7 +173,7 @@
         .loading-text {
             font-size: 1.5em;
             margin-bottom: 20px;
-            color: #32cd32;
+            color: var(--logo-green);
         }
 
         .loading-details {
@@ -177,16 +189,16 @@
             gap: 10px;
             margin-top: 20px;
             padding: 10px;
-            background: rgba(50, 205, 50, 0.1);
+            background: var(--logo-green-light);
             border-radius: 10px;
-            border-left: 4px solid #32cd32;
+            border-left: 4px solid var(--logo-green);
         }
 
         .status-dot {
             width: 10px;
             height: 10px;
             border-radius: 50%;
-            background: #32cd32;
+            background: var(--logo-green);
             animation: pulse 2s infinite;
         }
 
@@ -215,11 +227,11 @@
             border-radius: 15px;
             padding: 25px;
             margin-top: 30px;
-            border: 1px solid rgba(50, 205, 50, 0.3);
+            border: 1px solid rgba(0, 255, 136, 0.3);
         }
 
         .instructions h3 {
-            color: #32cd32;
+            color: var(--logo-green);
             margin-bottom: 15px;
             display: flex;
             align-items: center;
@@ -241,7 +253,7 @@
             content: "✓";
             position: absolute;
             left: 0;
-            color: #32cd32;
+            color: var(--logo-green);
             font-weight: bold;
         }
 
@@ -286,8 +298,9 @@
         }
 
         .retry-btn {
-            background: #32cd32;
-            color: white;
+            background: var(--logo-green);
+            color: black;
+            /* Black text for better contrast */
             border: none;
             padding: 12px 30px;
             border-radius: 8px;
@@ -307,7 +320,7 @@
             background: rgba(30, 41, 59, 0.9);
             padding: 15px;
             border-radius: 10px;
-            border: 1px solid rgba(50, 205, 50, 0.3);
+            border: 1px solid rgba(0, 255, 136, 0.3);
             max-width: 300px;
             backdrop-filter: blur(10px);
             display: none;
@@ -317,8 +330,9 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background: #32cd32;
-            color: white;
+            background: var(--logo-green);
+            color: black;
+            /* Black text for better contrast */
             width: 50px;
             height: 50px;
             border-radius: 50%;
@@ -328,7 +342,13 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 4px 15px rgba(50, 205, 50, 0.4);
+            box-shadow: 0 4px 15px rgba(0, 255, 136, 0.4);
+        }
+
+        /* Additional hover effect for help toggle */
+        .help-toggle:hover {
+            background: var(--logo-green-dark);
+            transform: scale(1.05);
         }
     </style>
 </head>
