fix live session

--- a/live-session.html
+++ b/live-session.html
@@ -24,9 +24,9 @@
 
         /* Logo color definition */
         :root {
-            --logo-green: #00ff88;
+            --logo-green: #003cff;
             /* Vibrant green from logo */
-            --logo-green-dark: #00cc6d;
+            --logo-green-dark: #0085cc;
             /* Darker shade for hover */
             --logo-green-light: rgba(0, 255, 136, 0.1);
             /* Light tint */
@@ -357,7 +357,7 @@
     <!-- Header -->
     <header class="session-header">
         <div class="logo-section">
-            <div class="logo">P2P</div>
+            <img src="favicon.ico" alt="Logo">
             <div class="brand-text">PEER-2-PEER <span class="green-text">PRO</span></div>
         </div>
 
