fix payment status

--- a/student-portal.html
+++ b/student-portal.html
@@ -20,15 +20,15 @@
         }
 
         :root {
-            --navy: #000033;
-            --navy-light: #1a1a4a;
+            --navy: #2020ee;
+            --navy-light: #6c6ce5;
             --green: #32cd32;
             --green-dark: #28a428;
             --sky-blue: #7fdff0;
             --white: #ffffff;
             --light-bg: #f4f7f9;
             --gray: #e1e5eb;
-            --gray-dark: #64748b;
+            --gray-dark: #062e67;
             --shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
             --radius: 16px;
             --radius-full: 9999px;
