fix class filter

--- a/create-class.html
+++ b/create-class.html
@@ -282,6 +282,71 @@
                 <label><i class="fas fa-book"></i> Lesson Topic</label>
                 <input type="text" id="topic" placeholder="e.g. Calculus Basics">
             </div>
+            <div class="form-group">
+                <label for="classSubject"><i class="fas fa-book"></i> Subject <span
+                        style="color:#ef4444">*</span></label>
+                <select id="classSubject" required style="
+    width: 100%;
+    padding: 14px;
+    border-radius: 12px;
+    border: 1px solid #ddd;
+    background: white;
+    font-size: 1rem;
+    margin-top: 8px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+  ">
+                    <option value="">-- Select Subject --</option>
+                    <option value="accounting">Accounting</option>
+                    <option value="afrikaans">Afrikaans</option>
+                    <option value="agricultural management practices">Agricultural Management Practices</option>
+                    <option value="agricultural science">Agricultural Science</option>
+                    <option value="agricultural technology">Agricultural Technology</option>
+                    <option value="business">Business Studies</option>
+                    <option value="cat">CAT</option>
+                    <option value="civil technology">Civil Technology</option>
+                    <option value="computer applications technology">Computer Applications Technology</option>
+                    <option value="consumer studies">Consumer Studies</option>
+                    <option value="dance studies">Dance Studies</option>
+                    <option value="design">Design</option>
+                    <option value="development studies">Development Studies</option>
+                    <option value="dramatic arts">Dramatic Arts</option>
+                    <option value="economic and management sciences">Economic and Management Sciences</option>
+                    <option value="economics">Economics</option>
+                    <option value="electrical technology">Electrical Technology</option>
+                    <option value="engineering graphics and design">Engineering Graphics and Design</option>
+                    <option value="english">English</option>
+                    <option value="equine studies">Equine Studies</option>
+                    <option value="geography">Geography</option>
+                    <option value="history">History</option>
+                    <option value="hospitality studies">Hospitality Studies</option>
+                    <option value="isindebele">IsiNdebele</option>
+                    <option value="isixhosa">IsiXhosa</option>
+                    <option value="isizulu">IsiZulu</option>
+                    <option value="it">IT</option>
+                    <option value="life orientation">Life Orientation</option>
+                    <option value="life_science">Life Science</option>
+                    <option value="marine sciences">Marine Sciences</option>
+                    <option value="maritime economics">Maritime Economics</option>
+                    <option value="mathematics">Mathematics</option>
+                    <option value="math_lit">Math Lit</option>
+                    <option value="mechanical technology">Mechanical Technology</option>
+                    <option value="music">Music</option>
+                    <option value="nautical science">Nautical Science</option>
+                    <option value="physics">Physics</option>
+                    <option value="religion studies">Religion Studies</option>
+                    <option value="sepedi">Sepedi</option>
+                    <option value="sesotho">Sesotho</option>
+                    <option value="setswana">Setswana</option>
+                    <option value="siswati">Siswati</option>
+                    <option value="sport and exercise science">Sport and Exercise Science</option>
+                    <option value="technical maths">Technical Maths</option>
+                    <option value="technical sciences">Technical Sciences</option>
+                    <option value="tourism">Tourism</option>
+                    <option value="tshivenda">Tshivenda</option>
+                    <option value="visual arts">Visual Arts</option>
+                    <option value="xitsonga">Xitsonga</option>
+                </select>
+            </div>
 
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
                 <div class="form-group">
