--- a/resources.html
+++ b/resources.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resources Library | Peer-2-Peer PRO</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -807,7 +808,7 @@
 <body>
     <nav class="navbar">
         <a href="index.html" class="logo">
-            <i class="fas fa-graduation-cap"></i>
+            <img src="peer-2-peer-logo.png" alt="Peer-2-Peer Logo">
             <span>PEER-2-PEER PRO</span>
         </a>
         <div class="nav-links">
